* set default variables * validate focus ring colors * validate color contrast * fix sass deprecation warning * handle transition in motion module

--- a/packages/design-system/src/styles/utils/accessibility/_variables.scss
+++ b/packages/design-system/src/styles/utils/accessibility/_variables.scss
@@ -1,7 +1,4 @@
 // focus ring
-
-$focus-ring-opacity: 1;
-$focus-ring-color: rgba(#000, $focus-ring-opacity);
-$focus-ring-inset: inset;
-$focus-ring-offset-width: 1px;
-$focus-ring-offset-color: rgba(#fff, $focus-ring-opacity);
+$focus-ring-color: #000 !default;
+$focus-ring-offset-width: 1px !default;
+$focus-ring-offset-color: #fff !default;
